syntax = "proto3";

package rpc;

option go_package = "./;rpc";

enum CallType {
  Request = 0;
  Response = 1;
  BidiStream = 2;
  ClientStream = 3;
  ServerStream = 4;
  StreamClosed = 5;
}

message ProtoPayload {
  CallType type = 1;
  uint64 streamId = 2;
  string route = 3;
  int32 serializeType = 4;
  bytes data = 5;
  ProtoError error = 6;
  repeated Header header = 7;
}

message ProtoError {
  int32 errCode = 6;
  string errMsg = 7;
}

message Header {
  string key = 1;
  string value = 2;
}